# mini-totp-cli

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  totp.rs  utils.rs
src/utils/: aegis.rs
tests/: test_totp.rs
