[package]
name = "mini-totp-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
base32 = "0.5.1"
base64 = "0.22.1"
crossterm = "0.29.0"
hex = "0.4.3"
hmac = "0.12.1"
scrypt = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
# sha2 = "0.10.9"
